feat: show spinner during queries

--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -6,10 +6,14 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title></title>
-    <link rel="stylesheet" type="text/css" href="/dirsearch.css">
+    <link rel="stylesheet" type="text/css" href="dirsearch.css?v=1">
 </head>
 <body>
 <script src="https://www.thathost.com/js/shh2.js"></script>
+
+<div id="spinner-overlay">
+    <div id="spinner"></div>
+</div>
 
 <div id="content"></div>
 
