--- a/src/main/resources/web/index.html
+++ b/src/main/resources/web/index.html
@@ -6,6 +6,7 @@
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <title></title>
+    <link rel="icon" href="logo-32.png" sizes="32x32">
     <link rel="stylesheet" type="text/css" href="dirsearch.css?v=2">
 </head>
 <body>
